// loki_service.proto - Loki 日志聚合服务 gRPC 接口
// 提供统一的日志推送和查询接口，支持多租户和标签管理
syntax = "proto3";

package isa.loki;

option go_package = "github.com/isa-cloud/isa_cloud/pkg/proto/loki";

import "common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// ========================================
// Loki 日志聚合服务
// ========================================
// 这是一个统一的日志聚合服务，为所有后端服务提供日志管理能力
// 支持：
// - 用户和组织级别的日志隔离
// - 批量日志推送
// - LogQL 查询
// - 标签管理和过滤
// - 日志流式推送
// - 多租户支持

service LokiService {
    // ========== 日志推送 ==========
    // 推送单条日志
    rpc PushLog(PushLogRequest) returns (PushLogResponse);
    // 批量推送日志
    rpc PushLogBatch(PushLogBatchRequest) returns (PushLogBatchResponse);
    // 流式推送日志（高吞吐量）
    rpc PushLogStream(stream PushLogRequest) returns (PushLogBatchResponse);
    // 简化的日志推送（自动添加标签）
    rpc PushSimpleLog(PushSimpleLogRequest) returns (PushLogResponse);
    
    // ========== 日志查询 ==========
    // LogQL 查询
    rpc QueryLogs(QueryLogsRequest) returns (QueryLogsResponse);
    // 范围查询（时间范围内的日志）
    rpc QueryRange(QueryRangeRequest) returns (QueryRangeResponse);
    // 实时日志尾部查询（类似 tail -f）
    rpc TailLogs(TailLogsRequest) returns (stream LogEntry);
    // 查询日志统计
    rpc QueryStats(QueryStatsRequest) returns (QueryStatsResponse);
    
    // ========== 标签管理 ==========
    // 查询可用标签
    rpc GetLabels(GetLabelsRequest) returns (GetLabelsResponse);
    // 查询标签值
    rpc GetLabelValues(GetLabelValuesRequest) returns (GetLabelValuesResponse);
    // 验证标签
    rpc ValidateLabels(ValidateLabelsRequest) returns (ValidateLabelsResponse);
    
    // ========== 日志流管理 ==========
    // 列出日志流
    rpc ListStreams(ListStreamsRequest) returns (ListStreamsResponse);
    // 获取流信息
    rpc GetStreamInfo(GetStreamInfoRequest) returns (GetStreamInfoResponse);
    // 删除日志流
    rpc DeleteStream(DeleteStreamRequest) returns (DeleteStreamResponse);
    
    // ========== 导出和备份 ==========
    // 导出日志到文件
    rpc ExportLogs(ExportLogsRequest) returns (stream ExportLogsResponse);
    // 获取导出任务状态
    rpc GetExportStatus(GetExportStatusRequest) returns (GetExportStatusResponse);
    
    // ========== 统计和监控 ==========
    rpc GetStatistics(GetStatisticsRequest) returns (GetStatisticsResponse);
    rpc GetUserQuota(GetUserQuotaRequest) returns (GetUserQuotaResponse);
    
    // ========== 健康检查 ==========
    rpc HealthCheck(LokiHealthCheckRequest) returns (LokiHealthCheckResponse);
}

// ========================================
// 数据结构
// ========================================

// 日志级别
enum LogLevel {
    LOG_LEVEL_UNKNOWN = 0;
    LOG_LEVEL_DEBUG = 1;
    LOG_LEVEL_INFO = 2;
    LOG_LEVEL_WARN = 3;
    LOG_LEVEL_ERROR = 4;
    LOG_LEVEL_FATAL = 5;
}

// 导出格式
enum ExportFormat {
    EXPORT_JSON = 0;
    EXPORT_JSONL = 1;   // JSON Lines
    EXPORT_CSV = 2;
    EXPORT_TEXT = 3;
}

// 日志条目
message LogEntry {
    google.protobuf.Timestamp timestamp = 1;        // 时间戳
    string line = 2;                                // 日志内容
    map<string, string> labels = 3;                 // 标签
    string stream_id = 4;                           // 流 ID
}

// 日志流信息
message StreamInfo {
    string stream_id = 1;                           // 流 ID
    map<string, string> labels = 2;                 // 流标签
    int64 entry_count = 3;                          // 日志条数
    int64 bytes = 4;                                // 字节数
    google.protobuf.Timestamp first_entry_at = 5;   // 第一条日志时间
    google.protobuf.Timestamp last_entry_at = 6;    // 最后一条日志时间
    string user_id = 7;                             // 所属用户
    string organization_id = 8;                     // 所属组织
}

// 时间序列数据点
message DataPoint {
    google.protobuf.Timestamp timestamp = 1;
    double value = 2;
}

// 查询结果（矩阵格式）
message Matrix {
    map<string, string> metric = 1;                 // 指标标签
    repeated DataPoint values = 2;                  // 数据点
}

// ========================================
// 请求/响应消息
// ========================================

// 推送日志请求
message PushLogRequest {
    string user_id = 1;                             // 用户 ID（权限和隔离）
    string organization_id = 2;                     // 组织 ID
    string tenant_id = 3;                           // 租户 ID（Loki 多租户）
    LogEntry entry = 4;                             // 日志条目
}

message PushLogResponse {
    bool success = 1;
    string message = 2;
    string stream_id = 3;                           // 分配的流 ID
}

// 批量推送日志请求
message PushLogBatchRequest {
    string user_id = 1;
    string organization_id = 2;
    string tenant_id = 3;
    repeated LogEntry entries = 4;                  // 日志条目列表
}

message PushLogBatchResponse {
    bool success = 1;
    int32 accepted_count = 2;                       // 接受的日志数
    int32 rejected_count = 3;                       // 拒绝的日志数
    repeated string errors = 4;                     // 错误信息
    string message = 5;
}

// 简化日志推送请求
message PushSimpleLogRequest {
    string user_id = 1;                             // 用户 ID
    string organization_id = 2;                     // 组织 ID
    string service = 3;                             // 服务名称
    LogLevel level = 4;                             // 日志级别
    string message = 5;                             // 日志消息
    map<string, string> extra_labels = 6;           // 额外标签
    google.protobuf.Timestamp timestamp = 7;        // 时间戳（可选）
}

// LogQL 查询请求
message QueryLogsRequest {
    string user_id = 1;                             // 用户 ID
    string organization_id = 2;                     // 组织 ID
    string tenant_id = 3;                           // 租户 ID
    string query = 4;                               // LogQL 查询语句
    int32 limit = 5;                                // 返回数量限制
    google.protobuf.Timestamp start = 6;            // 开始时间
    google.protobuf.Timestamp end = 7;              // 结束时间
    string direction = 8;                           // 方向：forward 或 backward
}

message QueryLogsResponse {
    repeated LogEntry entries = 1;                  // 日志条目
    int64 total_count = 2;                          // 总数（如果可获取）
    map<string, string> stats = 3;                  // 查询统计信息
}

// 范围查询请求
message QueryRangeRequest {
    string user_id = 1;
    string organization_id = 2;
    string tenant_id = 3;
    string query = 4;                               // LogQL 查询语句
    google.protobuf.Timestamp start = 5;            // 开始时间
    google.protobuf.Timestamp end = 6;              // 结束时间
    int32 step = 7;                                 // 步长（秒）
    int32 limit = 8;                                // 限制数量
}

message QueryRangeResponse {
    string result_type = 1;                         // 结果类型：matrix 或 streams
    repeated Matrix matrix_results = 2;             // 矩阵结果（聚合查询）
    repeated StreamResult stream_results = 3;       // 流结果（日志查询）
    map<string, string> stats = 4;                  // 统计信息
}

message StreamResult {
    map<string, string> stream = 1;                 // 流标签
    repeated LogEntry entries = 2;                  // 日志条目
}

// 实时尾部查询请求
message TailLogsRequest {
    string user_id = 1;
    string organization_id = 2;
    string tenant_id = 3;
    string query = 4;                               // LogQL 查询语句
    int32 delay_for = 5;                            // 延迟秒数（可选）
    int32 limit = 6;                                // 限制数量
    google.protobuf.Timestamp start = 7;            // 开始时间（可选）
}

// 查询统计请求
message QueryStatsRequest {
    string user_id = 1;
    string organization_id = 2;
    string tenant_id = 3;
    string query = 4;                               // LogQL 查询
    google.protobuf.Timestamp start = 5;
    google.protobuf.Timestamp end = 6;
}

message QueryStatsResponse {
    int64 total_entries = 1;                        // 总日志数
    int64 total_bytes = 2;                          // 总字节数
    int64 streams_count = 3;                        // 流数量
    double query_time_ms = 4;                       // 查询耗时（毫秒）
    map<LogLevel, int64> level_distribution = 5;    // 日志级别分布
    repeated string top_labels = 6;                 // 热门标签
}

// 获取标签请求
message GetLabelsRequest {
    string user_id = 1;
    string organization_id = 2;
    string tenant_id = 3;
    google.protobuf.Timestamp start = 4;            // 时间范围（可选）
    google.protobuf.Timestamp end = 5;
}

message GetLabelsResponse {
    repeated string labels = 1;                     // 标签名称列表
}

// 获取标签值请求
message GetLabelValuesRequest {
    string user_id = 1;
    string organization_id = 2;
    string tenant_id = 3;
    string label_name = 4;                          // 标签名称
    google.protobuf.Timestamp start = 5;
    google.protobuf.Timestamp end = 6;
    string query = 7;                               // 额外的过滤查询（可选）
}

message GetLabelValuesResponse {
    repeated string values = 1;                     // 标签值列表
}

// 验证标签请求
message ValidateLabelsRequest {
    map<string, string> labels = 1;                 // 要验证的标签
}

message ValidateLabelsResponse {
    bool valid = 1;
    repeated string violations = 2;                 // 违规项
    string message = 3;
}

// 列出日志流请求
message ListStreamsRequest {
    string user_id = 1;
    string organization_id = 2;
    string tenant_id = 3;
    map<string, string> label_filter = 4;           // 标签过滤（可选）
    int32 page = 5;
    int32 page_size = 6;
}

message ListStreamsResponse {
    repeated StreamInfo streams = 1;
    int32 total_count = 2;
    int32 page = 3;
    int32 page_size = 4;
}

// 获取流信息请求
message GetStreamInfoRequest {
    string user_id = 1;
    string stream_id = 2;
}

message GetStreamInfoResponse {
    StreamInfo stream = 1;
}

// 删除流请求
message DeleteStreamRequest {
    string user_id = 1;
    string stream_id = 2;
    google.protobuf.Timestamp start = 3;            // 删除时间范围（可选）
    google.protobuf.Timestamp end = 4;
}

message DeleteStreamResponse {
    bool success = 1;
    int64 deleted_entries = 2;
    string message = 3;
}

// 导出日志请求
message ExportLogsRequest {
    string user_id = 1;
    string organization_id = 2;
    string tenant_id = 3;
    string query = 4;                               // LogQL 查询
    google.protobuf.Timestamp start = 5;
    google.protobuf.Timestamp end = 6;
    ExportFormat format = 7;                        // 导出格式
    int32 chunk_size = 8;                           // 分块大小（可选）
}

message ExportLogsResponse {
    string export_id = 1;                           // 导出任务 ID
    bytes data = 2;                                 // 数据块
    int64 total_entries = 3;                        // 总条数
    int64 processed_entries = 4;                    // 已处理条数
    bool complete = 5;                              // 是否完成
}

// 导出状态请求
message GetExportStatusRequest {
    string user_id = 1;
    string export_id = 2;
}

message GetExportStatusResponse {
    string export_id = 1;
    string status = 2;                              // pending, processing, completed, failed
    int64 total_entries = 3;
    int64 exported_entries = 4;
    int32 progress_percentage = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp completed_at = 7;
    string error_message = 8;
}

// 统计信息请求
message GetStatisticsRequest {
    string user_id = 1;
    string organization_id = 2;
    google.protobuf.Timestamp start = 3;
    google.protobuf.Timestamp end = 4;
}

message GetStatisticsResponse {
    int64 total_entries = 1;                        // 总日志数
    int64 total_bytes = 2;                          // 总字节数
    int64 streams_count = 3;                        // 流数量
    map<string, int64> entries_by_service = 4;      // 按服务统计
    map<LogLevel, int64> entries_by_level = 5;      // 按级别统计
    repeated DataPoint ingestion_rate = 6;          // 摄入速率时序
    repeated string top_services = 7;               // 热门服务
    map<string, string> metadata = 8;               // 其他元数据
}

// 用户配额请求
message GetUserQuotaRequest {
    string user_id = 1;
    string organization_id = 2;
}

message GetUserQuotaResponse {
    int64 daily_limit = 1;                          // 每日限制（条）
    int64 today_used = 2;                           // 今日已用
    int64 storage_limit_bytes = 3;                  // 存储限制（字节）
    int64 storage_used_bytes = 4;                   // 已用存储
    int32 retention_days = 5;                       // 保留天数
    bool quota_exceeded = 6;                        // 是否超配额
}

// 健康检查请求
message LokiHealthCheckRequest {
    bool deep_check = 1;
}

message LokiHealthCheckResponse {
    bool healthy = 1;
    string loki_status = 2;                         // Loki 状态
    bool can_write = 3;                             // 是否可写
    bool can_read = 4;                              // 是否可读
    google.protobuf.Timestamp checked_at = 5;
    string message = 6;
    map<string, string> component_status = 7;       // 各组件状态
}



